# nimblefix

./: .clang-format  .gitignore  .gitmodules  20260402-005549-design.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_CN.md  xmake.lua
.github/workflows/: ci.yml
bench/: README.md  bench.sh  bench_support.h  fastfix_loopback.cpp  inbound_profile.h  main.cpp  nimblefix_loopback.cpp  quickfix_loopback.cpp  quickfix_main.cpp  tcp_rtt.cpp
config/: deps.lua
docs/: architecture.md  design.md  development.md  generated-first-api-redesign.md  public-api.md
examples/hello-fix/: acceptor.cpp  initiator.cpp  queue_handler.cpp
include/fastfix/base/: inline_split_vector.h  result.h  spsc_queue.h  status.h
include/fastfix/codec/: compiled_decoder.h  fast_int_format.h  fix_codec.h  fix_tags.h  raw_passthrough.h  simd_scan.h
include/fastfix/message/: fixed_layout_writer.h  message.h  typed_message.h
include/fastfix/profile/: artifact.h  artifact_builder.h  builder_codegen.h  dictgen_input.h  normalized_dictionary.h  overlay.h  profile_loader.h  resolved_profile.h
include/fastfix/runtime/: application.h  config.h  config_io.h  engine.h  interop_harness.h  io_poller.h  live_acceptor.h  live_initiator.h  live_runtime_support.h  live_session_registry.h  live_session_worker.h  metrics.h  poll_wakeup.h  profile_registry.h  shard_poller.h  sharded_runtime.h  soak.h  thread_affinity.h  timer_wheel.h  trace.h
include/fastfix/session/: admin_protocol.h  encoded_application_message.h  encoded_frame.h  resend_recovery.h  session_core.h  session_handle.h  session_key.h  session_send_envelope.h  session_snapshot.h  transport_profile.h  validation_policy.h
include/fastfix/store/: durable_batch_store.h  memory_store.h  mmap_store.h  session_store.h
include/fastfix/transport/: tcp_transport.h
include/nimblefix/base/: inline_split_vector.h  result.h  spsc_queue.h  status.h
include/nimblefix/codec/: compiled_decoder.h  fast_int_format.h  fix_codec.h  fix_tags.h  raw_passthrough.h  simd_scan.h
include/nimblefix/message/: fixed_layout_writer.h  message.h  typed_message.h
include/nimblefix/profile/: artifact.h  artifact_builder.h  builder_codegen.h  dictgen_input.h  normalized_dictionary.h  overlay.h  profile_loader.h  resolved_profile.h
include/nimblefix/runtime/: application.h  config.h  engine.h  interop_harness.h  io_poller.h  live_acceptor.h  live_initiator.h  live_runtime_support.h  live_session_registry.h  live_session_worker.h  metrics.h  poll_wakeup.h  profile_registry.h  shard_poller.h  sharded_runtime.h  soak.h  thread_affinity.h  timer_wheel.h  trace.h
include/nimblefix/session/: admin_protocol.h  encoded_application_message.h  encoded_frame.h  resend_recovery.h  session_core.h  session_handle.h  session_key.h  session_send_envelope.h  session_snapshot.h  transport_profile.h  validation_policy.h
include/nimblefix/store/: durable_batch_store.h  memory_store.h  mmap_store.h  session_store.h
include/nimblefix/transport/: tcp_transport.h
samples/: basic_overlay.nfd  basic_profile.ffd  basic_profile.nfd
scripts/: offline_build.sh
src/codec/: compiled_decoder.cpp  fix_codec.cpp  raw_passthrough.cpp
src/message/: fixed_layout_writer.cpp  message.cpp  typed_message.cpp
src/profile/: artifact_builder.cpp  builder_codegen.cpp  contract_sidecar.cpp  dictgen_input.cpp  normalized_dictionary.cpp  overlay.cpp  profile_loader.cpp
src/runtime/: application.cpp  config.cpp  contract_binding.cpp  dynamic_config.cpp  engine.cpp  fix_session_testcases.cpp  ha.cpp  internal_config_parser.cpp  interop_harness.cpp  io_poller.cpp  live_acceptor.cpp  live_initiator.cpp  live_session_registry.cpp  live_session_worker.cpp  management.cpp  metrics.cpp  poll_wakeup.cpp  profile_registry.cpp  session_schedule.cpp  shard_poller.cpp  sharded_runtime.cpp  soak.cpp  thread_affinity.cpp  trace.cpp
src/session/: admin_protocol.cpp  resend_recovery.cpp  session_core.cpp  transport_profile.cpp
src/store/: durable_batch_store.cpp  memory_store.cpp  mmap_store.cpp
src/tools/: schema_optimizer.cpp
src/tools/msgdump/: message_dump.cpp
src/transport/: tcp_transport.cpp
tests/: admin_fuzz_corpus_test.cpp  admin_protocol_test.cpp  advanced_message_api_test.cpp  application_poller_test.cpp  application_queue_test.cpp  contract_sidecar_test.cpp  dictgen_test.cpp  dynamic_config_test.cpp  fix_codec_test.cpp  fix_session_testcases_test.cpp  gap_state_transition_test.cpp  ha_test.cpp  interop_harness_test.cpp  live_initiator_test.cpp  live_runtime_test.cpp  message_api_test.cpp  message_dump_test.cpp  metrics_trace_test.cpp  nimble_namespace_smoke_test.cpp  normalized_dictionary_test.cpp  orchestra_import_test.cpp  outbound_fragment_test.cpp  overlay_merge_test.cpp  parser_surface_test.cpp  profile_loader_test.cpp  raw_passthrough_test.cpp  resend_recovery_test.cpp  runtime_config_test.cpp  schema_optimizer_test.cpp  send_side_test.cpp  session_core_test.cpp  session_schedule_test.cpp  sharded_runtime_test.cpp  soak_smoke_test.cpp  socket_loopback_test.cpp  store_recovery_test.cpp  test_support.h  timer_wheel_test.cpp  transport_fault_test.cpp  typed_message_test.cpp  (+2 more)
tests/data/: test_fix44.xml
tests/data/fix-session/: official-session-cases.ffcases  official-session-cases.nfcases  sample-session-testcases.html
tests/data/fuzz/: dictgen_invalid.ffd  dictgen_valid.ffd  overlay_valid.ffd  runtime_config_invalid.ffcfg  (+2 more)
tools/acceptor/: main.cpp
tools/dictgen/: main.cpp
tools/external-interop/: NimbleFIXEchoFIX44.xml  quickfix_python_echo.py  run_quickfix_python_matrix.py
tools/fix-session-testcases/: main.cpp
tools/fuzz-codec/: fuzz_entry.cpp  main.cpp
tools/fuzz-config/: main.cpp
tools/fuzz-dictgen/: main.cpp
tools/initiator/: main.cpp
tools/interop-runner/: main.cpp
tools/msgdump/: main.cpp
tools/orchestra-import/: main.cpp  orchestra_import.cpp  orchestra_import.h
tools/schema-optimizer/: main.cpp
tools/soak/: main.cpp
tools/usagegen/: main.cpp
tools/xml2ffd/: main.cpp  xml2ffd.cpp  xml2ffd.h
tools/xml2nfd/: main.cpp  xml2nfd.cpp  xml2nfd.h
(+210 files in other folders)
